--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "lodash": "^4.17.21",
     "ssh2": "^1.16.0",
+    "uuid": "^11.0.3",
     "vue": "^3.5.13"
   }
 }
