--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-vue-app",
-  "productName": "my-vue-app",
+  "name": "sshsx",
+  "productName": "sshsx",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "ssh client",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -37,7 +37,10 @@
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "electron-context-menu": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "ssh2": "^1.16.0",
     "uuid": "^11.0.3",
