--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   "license": "MIT",
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-image": "^0.8.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-unicode11": "^0.8.0",
+    "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "electron-context-menu": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
