--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "electron": "33.2.1",
     "less": "^4.2.1",
     "less-loader": "^12.2.0",
+    "naive-ui": "^2.41.0",
     "prettier": "^3.4.2",
+    "vfonts": "^0.0.3",
     "vite": "^5.4.11"
   },
   "keywords": [],
