--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "lodash": "^4.17.21",
     "ssh2": "^1.16.0",
     "uuid": "^11.0.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.13"
   }
 }
