feat(file): 添加删除文件功能并优化文件显示
- 新增删除文件监听功能，实现文件删除成功后的提示和目录刷新
- 优化文件大小显示，使用 bytes 库进行格式化
- 为目录类型文件添加空大小字段

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@xterm/addon-unicode11": "^0.8.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "bytes": "^3.1.2",
     "electron-context-menu": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
