--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "bytes": "^3.1.2",
+    "chokidar": "^4.0.3",
     "electron-context-menu": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.0",
